Bug 168120 - line thickness menu is transparent and uses different font than other menus
Summary: line thickness menu is transparent and uses different font than other menus
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-26 14:17 UTC by alanas.00+l
Modified: 2025-11-29 05:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
kde_calc.webp (82.12 KB, image/webp)
2025-08-26 14:18 UTC, alanas.00+l
Details
kde_impress.webp (66.37 KB, image/webp)
2025-08-26 14:19 UTC, alanas.00+l
Details
How it looks on Windows (45.36 KB, image/png)
2025-08-26 15:38 UTC, Xisco Faulí
Details
fixed_kde_calc.webp (83.99 KB, image/webp)
2025-09-08 13:13 UTC, alanas.00+l
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alanas.00+l 2025-08-26 14:17:48 UTC
Description:



Steps to Reproduce:
calc:
1. select cells
2. show sidebar "Properies"
3. show "Cell Appearance" inside sidebar
4. click bottom left combo box (hover text: "Specify the borders of the selected cells.") inside "Cell Appearance"
5. click anything except first thing (hover text: "No Borders")
6. click center right menu (hover text: "Select the line style of the borders.") inside "Cell Appearance"

impress:
1. select "Click to add Title" text box
2. show sidebar "Properies"
3. show "Line" inside sidebar
4. click "Thickness:" combo box

Actual Results:
look at kde_calc.webp and kde_impress.webp attachments

Expected Results:
line thickness menu background is not transparent and "3.0 pt" is same font as other ui


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 248ff6232da4f7efa5b4365434d413ce653267d9
CPU threads: 8; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 alanas.00+l 2025-08-26 14:18:55 UTC
Created attachment 202522 [details]
kde_calc.webp
Comment 2 alanas.00+l 2025-08-26 14:19:20 UTC
Created attachment 202523 [details]
kde_impress.webp
Comment 3 Mike Kaganski 2025-08-26 14:51:47 UTC
On Windows, it is different - but also erratic: have totally black opaque background, and only selected element is visible.
Comment 4 Xisco Faulí 2025-08-26 15:38:19 UTC
Created attachment 202525 [details]
How it looks on Windows

I can't reproduce it in

Version: 25.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: bc798e31a274a920515a01954f2e09289632659e
CPU threads: 16; OS: Windows 10 X86_64 (build 9600); UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-US
Calc: threaded
Comment 5 Saburo 2025-08-27 05:49:43 UTC
bibisected with linux-64-26.2 ceb2ce63334fca725cb7fc9b05615301c9cbeb09 is the first bad commit
source 088a7c7c451321a800ca8d3523a18b6bb93239b7

bibisected with win64-26.2 7686c6aa670f6c28b92e8ad5f2eb94f3304564ac is the first bad commit
source 088a7c7c451321a800ca8d3523a18b6bb93239b7

commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
author	Noel Grandin <noelgrandin@gmail.com>	Tue Sep 24 16:18:11 2024 +0200

remove alpha device from OutputDevice
Comment 6 Commit Notification 2025-09-01 19:26:14 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11f8c3a84891318519ec356860ffedefa67e6339

tdf#168120 line thickness menu is transparent

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 alanas.00+l 2025-09-08 13:13:55 UTC
Created attachment 202745 [details]
fixed_kde_calc.webp

(In reply to Commit Notification from comment #6)
> Affected users are encouraged to test the fix and report feedback.

I updated libreoffice to:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96585f14bb34460db54267af724d4023fc520283
CPU threads: 8; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

background is fixed, font is still wrong
Comment 8 Mike Kaganski 2025-09-08 14:09:35 UTC
(In reply to alanas.00+l from comment #7)

Font is unrelated - please file a separate bug. There we would need to check if fonts were shown differently in some earlier version.
Comment 9 Michael Weghorn 2025-11-28 13:18:03 UTC
(In reply to alanas.00+l from comment #7)
> background is fixed, font is still wrong

FYI, pending change series up to https://gerrit.libreoffice.org/c/core/+/194777 fixes that by switching to more standard widgets.
Comment 10 Commit Notification 2025-11-29 05:53:43 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b185d346422a26b1ad252f7ec590c07034332ad0

tdf#168120 sc: Switch to weld::TreeView in CellLineStyleControl

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-11-29 05:53:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43c1502866b30e59008c937a55d8a2bdca9a6ebb

tdf#168120 sc: Drop now unused CellLineStyleValueSet

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.