tdf#168120 line thickness menu is transparent

regression from
    commit 088a7c7c451321a800ca8d3523a18b6bb93239b7
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Sep 24 16:18:11 2024 +0200
    remove alpha device from OutputDevice

Change-Id: I898218fe7ba9f5fc9dce74fcc3655fdc8d7172d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190483
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>